summary: NetApp ofrece funciones nuevas y mejoradas en cada lanzamiento de los servicios de STaaS de Keystone. 
---
= Novedades en STaaS de Keystone
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Obtenga información sobre las últimas características y mejoras en los servicios Keystone STaaS.



== 13 de octubre de 2025

Nuevas mejoras en el panel de Keystone en la NetApp Console:



=== Columna de anulación de la política de QoS en la pestaña Activos

La pestaña *Volúmenes en clústeres* dentro de la pestaña *Activos* ahora incluye una columna *Anulación de política de QoS* que indica si se omiten las reglas de QoS para los volúmenes de respaldo y espejo, mostrando *verdadero* (reglas ignoradas), *falso* (reglas aplicadas) o *N/D* (para volúmenes espejo).


NOTE: Para las suscripciones de Keystone v3, esta columna muestra *N/D* ya que las políticas de QoS no son aplicables en la oferta v3.



=== Visibilidad mejorada de alertas en la página Descripción general

La página *Descripción general* ahora incluye dos nuevas secciones de alerta denominadas *Alertas no resueltas por gravedad* y *Alertas de Keystone no resueltas más antiguas*. Para obtener más información, consultelink:https://docs.netapp.com/us-en/keystone-staas/integrations/keystone-console.html["Panel de control de Keystone en la consola de NetApp"] .



== 6 de octubre de 2025



=== BlueXP ahora es NetApp Console

La consola NetApp , construida sobre la base BlueXP mejorada y reestructurada, proporciona una gestión centralizada del almacenamiento NetApp y de los servicios de datos NetApp en entornos locales y en la nube a nivel empresarial, brindando información en tiempo real, flujos de trabajo más rápidos y una administración simplificada, que es altamente segura y compatible.
